package creatures.attributes;

public class Stats {
}
