package world;

import collectibles.Item;
import controller.Choice;
import creatures.Creature;
import java.util.List;

public class Location {
    private String locationName;
    private String description;
    private List<Creature> creatures;
    private List<Item> items;
    private List<Choice> availableChoices;



}
